--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -228,10 +228,10 @@
     "\n",
     "$$p_{\\theta}({\\bf x}, {\\bf z}) = p_{\\theta}({\\bf x}|{\\bf z}) p_{\\theta}({\\bf z})$$\n",
     "\n",
-    "We assume that the various probability distributions $p_i$ that make up $p_{\\theta}({\\bf x}, {\\bf z})$ have the following properties:\n",
+    "We assume that the various probability distributions $p_i$ that make up $p_{\\theta}({\\bf x}, {\\bf z})$ have the following properties (generally satisfied by the distributions available in [Pyro](http://docs.pyro.ai/en/stable/distributions.html) and [PyTorch Distributions](https://pytorch.org/docs/stable/distributions.html)):\n",
     "\n",
-    "1. we can sample from each $p_i$\n",
-    "2. we can compute the pointwise log pdf $p_i$ \n",
+    "1. we can efficiently sample from each $p_i$\n",
+    "2. we can efficiently compute the pointwise log pdf $p_i$ \n",
     "3. $p_i$ is differentiable w.r.t. the parameters $\\theta$\n",
     "\n",
     "We would like to calculate the posterior over the latent variables $\\bf z$:\n",
@@ -267,7 +267,7 @@
    "source": [
     "### Model\n",
     "\n",
-    "If we write out the formula for linear regression predictor and the usual $L_2$ loss as PyTorch programs, we get the following:"
+    "If we write out the formula for our linear regression predictor as a PyTorch program, we get the following:"
    ]
   },
   {
@@ -277,9 +277,6 @@
     "```py\n",
     "def linear_reg_model(a, b_a, b_r, b_ar, is_cont_africa, ruggedness):\n",
     "    return a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
-    "\n",
-    "def mse_loss(y_pred, y_true):\n",
-    "    return -torch.sum((y_pred - y_true) ** 2)\n",
     "```"
    ]
   },
@@ -287,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to make our linear regression Bayesian, we need to put priors on the parameters $\\alpha$ and $\\beta$. These are distributions that represent our prior belief about reasonable values for $\\alpha$ and $\\beta$ (before observing any data). We will also add a random scale parameter $\\sigma_y$ for the output.\n",
+    "In order to make our linear regression model Bayesian, we need to put priors on the parameters $\\alpha$ and $\\beta$ (expanded here into scalars `b_a`, `b_r`, and `b_ar`). These are distributions that represent our prior belief about reasonable values for $\\alpha$ and $\\beta$ (before observing any data). We will also add a random scale parameter $\\sigma_y$ for the output.\n",
     "\n",
     "We display the graphical notation for this model using [daft](http://daft-pgm.org/):"
    ]
@@ -417,7 +414,7 @@
    "source": [
     "### Optimizing the Evidence Lower Bound (ELBO)\n",
     "\n",
-    "We will use stochastic variational inference (SVI) (for an extended introduction to SVI, see [SVI Part I](pyro.ai/examples/svi_part_i.html)) for doing inference, using stochastic gradient descent to optimize the output of a `pyro.infer.Trace_ELBO` object that we pass to `pyro.infer.SVI`. "
+    "We will use stochastic variational inference (SVI) (for an extended introduction to SVI, see [SVI Part I](https://pyro.ai/examples/svi_part_i.html)) for doing inference, using stochastic gradient descent to optimize the output of a `pyro.infer.Trace_ELBO` object that we pass to `pyro.infer.SVI`. "
    ]
   },
   {
@@ -436,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we use the `Adam` optimizer from Pyro's `optim` module and not the `torch.optim` module as earlier. Here `Adam` is a thin wrapper around `torch.optim.Adam` (see [here](pyro.ai/examples/svi_part_i.html#Optimizers) for a discussion). Optimizers in `pyro.optim` are used to optimize and update parameter values in Pyro's parameter store. In particular, you will notice that we do not need to pass in learnable parameters to the optimizer since that is determined by the guide code and happens behind the scenes within the `SVI` class automatically. To take an ELBO gradient step we simply call the step method of SVI. The data argument we pass to `SVI.step` will be passed to both `model()` and `guide()`. The complete training loop is as follows:"
+    "Here `pyro.optim.Adam` is a thin wrapper around `torch.optim.Adam` (see [here](https://pyro.ai/examples/svi_part_i.html#Optimizers) for a discussion). Optimizers in `pyro.optim` are used to optimize and update parameter values in Pyro's parameter store. In particular, you will notice that we do not need to pass in learnable parameters to the optimizer since that is determined by the guide code and happens behind the scenes within the `SVI` class automatically. To take an ELBO gradient step we simply call the step method of SVI. The data argument we pass to `SVI.step` will be passed to both `model()` and `guide()`. The complete training loop is as follows:"
    ]
   },
   {
@@ -506,7 +503,7 @@
    ],
    "source": [
     "for name, value in pyro.get_param_store().items():\n",
-    "    print(name, pyro.param(name))"
+    "    print(name, pyro.param(name).data.cpu().numpy())"
    ]
   },
   {
@@ -660,7 +657,7 @@
    "source": [
     "## MultivariateNormal Guide\n",
     "\n",
-    "Variational inference is biased, and may not recover the true posterior distribution if it is not contained in the parametrized family of approximate posteriors. To illustrate this, we will try using a guide that generates samples from a Cholesky factorization of a multivariate normal distribution.  This allows us to capture the correlations between the latent variables via a covariance matrix; our previous guide ignored these correlations.\n",
+    "Variational inference is biased, and may not recover the true posterior distribution if it is not contained in the parametrized family of approximate posteriors. To illustrate this, we will try using a guide that generates samples from a multivariate normal distribution over all parameters.  This allows us to capture the correlations between the latent variables via a covariance matrix; our previous guide ignored these correlations.\n",
     "\n",
     "If we wrote this manually, we would need to combine all the latent variables so we could sample a `MultivariateNormal` jointly. Instead we will use `pyro.infer.autoguide`, which contains a number of guide generators that automatically construct a guide for any model using common approximations. In this case, we use `AutoMultivariateNormal`:"
    ]
