pin daft version

--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q pyro-ppl[extras] daft"
+    "!pip install -q pyro-ppl[extras] daft==0.1.0"
    ]
   },
   {
