default to cuda

--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -1257,7 +1257,7 @@
    "source": [
     "## Results\n",
     "\n",
-    "Training corresponds to maximizing the evidence lower bound (ELBO) over the training dataset. We train for a few iterations and evaluate the ELBO for the test dataset,"
+    "Training corresponds to maximizing the evidence lower bound (ELBO) over the training dataset. We train for a few iterations and evaluate the ELBO for the test dataset."
    ]
   },
   {
@@ -1268,7 +1268,7 @@
    "source": [
     "# Run options\n",
     "LEARNING_RATE = 1.0e-3\n",
-    "USE_CUDA = False\n",
+    "USE_CUDA = True\n",
     "NUM_EPOCHS = 101\n",
     "TEST_FREQUENCY = 5"
    ]
