--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -1464,7 +1464,10 @@
     "fig, axs = plt.subplots(nrows=2, ncols=2)\n",
     "fig.suptitle(\"Samples from the trained model\", fontsize=16)\n",
     "for i in range(2*2):\n",
-    "    sampled_img = vae.model(x=torch.zeros((1, 1, 28, 28))).detach().cpu().numpy()\n",
+    "    dummy_img = torch.zeros((1, 1, 28, 28))\n",
+    "    if USE_CUDA:\n",
+    "        dummy_img = dummy_img.cuda()\n",
+    "    sampled_img = vae.model(dummy_img).detach().cpu().numpy()\n",
     "    ax = axs[i % 2, i // 2]\n",
     "    ax.imshow(sampled_img[0, 0])\n",
     "    ax.xaxis.set_visible(False)\n",
@@ -1505,7 +1508,10 @@
     "    ax.yaxis.set_visible(False)\n",
     "\n",
     "for i in range(2):\n",
-    "    sampled_img = vae.reconstruct_img(test_batch[i:i+1]).detach().cpu().numpy()\n",
+    "    test_img = test_batch[i:i+1]\n",
+    "    if USE_CUDA:\n",
+    "        test_img = test_img.cuda()\n",
+    "    sampled_img = vae.reconstruct_img(test_img).detach().cpu().numpy()\n",
     "    ax = axs[i, 1]\n",
     "    ax.imshow(sampled_img[0, 0])\n",
     "    ax.xaxis.set_visible(False)\n",
