cuda before tsne

--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -1566,6 +1566,8 @@
     "from sklearn.manifold import TSNE\n",
     "\n",
     "data = test_loader.dataset.test_data.float()\n",
+    "if USE_CUDA:\n",
+    "    data = data.cuda()\n",
     "classes = test_loader.dataset.test_labels\n",
     "z_loc, z_scale = vae.encoder(data)\n",
     "model_tsne = TSNE(n_components=2, random_state=0)\n",
