--- a/tutorial/source/svi_part_ii.ipynb
+++ b/tutorial/source/svi_part_ii.ipynb
@@ -104,7 +104,7 @@
     "    pyro.sample(\"obs_{}\".format(i), dist.Bernoulli(f), obs=data[i])\n",
     "```    \n",
     "\n",
-    "That's all there is to it: we just use the argument `subsample_size`. Whenever we run `model()` we now only evaluate the log likelihood for 5 randomly chosen datapoints in `data`; in addition, the log likelihood will be automatically scaled by the appropriate factor of $\\tfrac{10}{5} = 2$. What about vectorized `plate`? The incantantion is entirely analogous:\n",
+    "That's all there is to it: we just use the argument `subsample_size`. Whenever we run `model()` we now only evaluate the log likelihood for 5 randomly chosen datapoints in `data`; in addition, the log likelihood will be automatically scaled by the appropriate factor of $\\tfrac{10}{5} = 2$. What about vectorized `plate`? The incantation is entirely analogous:\n",
     "\n",
     "```python\n",
     "with plate('observe_data', size=10, subsample_size=5) as ind:\n",
