--- a/tutorial/source/mle_map.ipynb
+++ b/tutorial/source/mle_map.ipynb
@@ -24,7 +24,7 @@
     "from torch.distributions import constraints\n",
     "import pyro\n",
     "import pyro.distributions as dist\n",
-    "from pyro.infer import SVI, Trace_ELBO\n",
+    "from pyro.infer import SVI, Trace_ELBO",
    ]
   },
   {
