--- a/tutorial/source/intro_part_i.ipynb
+++ b/tutorial/source/intro_part_i.ipynb
@@ -233,9 +233,9 @@
     "        t = 0\n",
     "    x = pyro.sample(\"x_{}\".format(t), pyro.distributions.Bernoulli(p))\n",
     "    if x.item() == 1:\n",
-    "        return 0\n",
+    "        return t\n",
     "    else:\n",
-    "        return 1 + geometric(p, t + 1)\n",
+    "        return geometric(p, t + 1)\n",
     "    \n",
     "print(geometric(0.5))"
    ]
