Replace custom factor with pyro.factor in tutorials

--- a/tutorial/source/RSA-hyperbole.ipynb
+++ b/tutorial/source/RSA-hyperbole.ipynb
@@ -29,7 +29,7 @@
     "import pyro.distributions as dist\n",
     "import pyro.poutine as poutine\n",
     "\n",
-    "from search_inference import factor, HashingMarginal, memoize, Search"
+    "from search_inference import HashingMarginal, memoize, Search"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "@Marginal\n",
     "def literal_listener(utterance):\n",
     "    state=state_prior()\n",
-    "    factor(\"literal_meaning\", 0. if meaning(utterance, state.price) else -999999.)\n",
+    "    pyro.factor(\"literal_meaning\", 0. if meaning(utterance, state.price) else -999999.)\n",
     "    return state\n",
     "\n",
     "@Marginal\n",
@@ -351,7 +351,7 @@
     "@Marginal\n",
     "def literal_listener(utterance):\n",
     "    state=state_prior()\n",
-    "    factor(\"literal_meaning\", 0. if meaning(utterance, state.price) else -999999.)\n",
+    "    pyro.factor(\"literal_meaning\", 0. if meaning(utterance, state.price) else -999999.)\n",
     "    return state\n",
     "\n",
     "@Marginal\n",
