--- a/tutorial/source/RSA-implicature.ipynb
+++ b/tutorial/source/RSA-implicature.ipynb
@@ -30,7 +30,7 @@
     "import pyro.distributions as dist\n",
     "import pyro.poutine as poutine\n",
     "\n",
-    "from search_inference import factor, HashingMarginal, memoize, Search"
+    "from search_inference import HashingMarginal, memoize, Search"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "@Marginal\n",
     "def literal_listener(utterance):\n",
     "    state = state_prior()\n",
-    "    factor(\"literal_meaning\", 0. if meaning(utterance, state) else -999999.)\n",
+    "    pyro.factor(\"literal_meaning\", 0. if meaning(utterance, state) else -999999.)\n",
     "    return state"
    ]
   },
