fix missing data definition in cell 9

--- a/tutorial/source/svi_part_i.ipynb
+++ b/tutorial/source/svi_part_i.ipynb
@@ -100,20 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.9519)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def guide():\n",
     "    return pyro.sample(\"z_1\", dist.Beta(1,1))"
@@ -169,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,6 +361,13 @@
    "source": [
     "# setup the inference algorithm\n",
     "svi = SVI(model, guide, optimizer, loss)\n",
+    "\n",
+    "# create some data with 6 observed heads and 4 observed tails\n",
+    "data = []\n",
+    "for _ in range(6):\n",
+    "    data.append(torch.tensor(1.0))\n",
+    "for _ in range(4):\n",
+    "    data.append(torch.tensor(0.0))\n",
     "\n",
     "n_steps = 5000\n",
     "# do gradient steps\n",
