more smoke_test

--- a/tutorial/source/prodlda.ipynb
+++ b/tutorial/source/prodlda.ipynb
@@ -162,7 +162,8 @@
     "        pyro.sample('obs', dist.Categorical(theta), obs=data)\n",
     "        \n",
     "nuts_kernel = NUTS(model)\n",
-    "mcmc = MCMC(nuts_kernel, num_samples=1000, warmup_steps=200)\n",
+    "num_samples, warmup_steps = (1000, 200) if not smoke_test else (10, 10)\n",
+    "mcmc = MCMC(nuts_kernel, num_samples=num_samples, warmup_steps=warmup_steps)\n",
     "mcmc.run(data - 1)  # -1: we need to work with indices [0, 5] instead of [1, 6]\n",
     "hmc_samples = {k: v.detach().cpu().numpy() \n",
     "               for k, v in mcmc.get_samples().items()}"
@@ -511,7 +512,7 @@
     "\n",
     "optimizer = pyro.optim.Adam({\"lr\": learning_rate})\n",
     "svi = SVI(prodLDA.model, prodLDA.guide, optimizer, loss=TraceMeanField_ELBO())\n",
-    "num_batches = int(math.ceil(docs.shape[0] / batch_size))\n",
+    "num_batches = int(math.ceil(docs.shape[0] / batch_size)) if not smoke_test else 1\n",
     "\n",
     "bar = trange(num_epochs)\n",
     "for epoch in bar:\n",
