--- a/tutorial/source/prodlda.ipynb
+++ b/tutorial/source/prodlda.ipynb
@@ -245,6 +245,7 @@
     "Finally, let's see the 3rd representation: the **probabilistic graphical model**. Probabilistic graphical models provide a graphical language for describing families of probability distributions. The graphical model for LDA is:\n",
     "\n",
     "<img src=\"https://i.ibb.co/jDGtP9Z/Screen-Shot-2020-09-25-at-12-33-35.png\" alt=\"image2\" width=\"400\">\n",
+    "<center>Figure 3: LDA as a graphical model.</center>\n",
     "\n",
     "Each node is a random variable and is labeled according to its role in the generative process. The hidden nodes — the topic proportions, assignments, and topics — are unshaded. The observed nodes — the words of the documents — are shaded. The rectangles denote “plate” notation, which is used to encode replication of variables. The $N$ plate denotes the collection of words within documents; the $M$ plate denotes the collection of documents within the collection.\n",
     "\n",
@@ -260,7 +261,7 @@
     "\n",
     "Both mean-field and collapsed Gibbs have the drawback that applying them to new topic models, even if there is only a small change to the modeling assumptions, requires re-deriving the inference methods, which can be mathematically arduous and time consuming, and limits the ability of practitioners to freely explore the space of different modeling assumptions.\n",
     "\n",
-    "Autoencoding variational Bayes (AEVB) is a particularly natural choice for topic models, because it trains an inference network, a neural network that directly maps a document to an approximate posterior distribution, without the need to run further variational updates. However, despite some notable successes for latent Gaussian models, black box inference methods are significantly more challenging to apply to topic models. Two main challenges are: first, the Dirichlet prior is not a location scale family, which hinders reparameterisation, and second, the well known problem of component collapse, in which the inference network becomes stuck in a bad local optimum in which all topics are identical.\n",
+    "Autoencoding variational Bayes (AEVB) is a particularly natural choice for topic models, because it trains an encoder network, a neural network that directly maps a document to an approximate posterior distribution, without the need to run further variational updates. However, despite some notable successes for latent Gaussian models, black box inference methods are significantly more challenging to apply to topic models. Two main challenges are: first, the Dirichlet prior is not a location scale family, which hinders reparameterization, and second, the well known problem of component collapse, in which the encoder network becomes stuck in a bad local optimum in which all topics are identical. (Note, however, that PyTorch/Pyro have included support for reparameterizable gradients for the Dirichlet distribution since 2018).\n",
     "\n",
     "In the paper Autoencoding Variational Inference For Topic Models from 2017, Akash Srivastava and Charles Sutton addressed both these challenges. They presented the first effective AEVB inference method for topic models, and illustrated it by introducing a new topic model called ProdLDA, which produces better topics than standard LDA, is fast and computationally efficent, and does not require complex mathematical derivations to accomodate changes to the model. Let's now understand this specific model and see how to implement it using Pyro.\n",
     "\n",
@@ -342,13 +343,13 @@
     "\n",
     "To successfuly apply AEVB to LDA, here's how the paper's authors addressed the two challenges mentioned earlier.\n",
     "\n",
-    "**Challenge #1: Dirichlet prior is not a location scale family.** To address this issue, they used an inference network that approximates the Dirichlet prior $p(\\theta | \\alpha)$ with a log-normal distribution. In other words, they use\n",
+    "**Challenge #1: Dirichlet prior is not a location scale family.** To address this issue, they used an encoder network that approximates the Dirichlet prior $p(\\theta | \\alpha)$ with a log-normal distribution. In other words, they use\n",
     "\n",
     "$$ p(\\theta | \\alpha) \\approx p(\\theta | \\mu, \\Sigma) = \\mathcal{LN}(\\theta | \\mu, \\Sigma) $$\n",
     "\n",
-    "where $\\mu$ and $\\Sigma$ are the inference network outputs. \n",
+    "where $\\mu$ and $\\Sigma$ are the encoder network outputs. \n",
     "\n",
-    "**Challenge #2: Component collapse (i.e. inference network stuck in bad local optimum).** To address this isue, they used the Adam optimizer, batch normalization and dropout units in the inference network.\n",
+    "**Challenge #2: Component collapse (i.e. encoder network stuck in bad local optimum).** To address this isue, they used the Adam optimizer, batch normalization and dropout units in the encoder network.\n",
     "\n",
     "**ProdLDA vs LDA.** Finally, the only remaining difference between ProdLDA and regular LDA is that: i) $\\beta$ is unnormalized; and ii) the conditional distribution of $w_n$ is defined as $w_n | \\beta, \\theta \\sim \\text{Categorical}(\\sigma(\\beta \\theta))$.\n",
     "\n",
@@ -375,7 +376,7 @@
    "outputs": [],
    "source": [
     "class Encoder(nn.Module):\n",
-    "    # Base class for the inference net, used in the guide\n",
+    "    # Base class for the encoder net, used in the guide\n",
     "    def __init__(self, vocab_size, num_topics, hidden, dropout):\n",
     "        super().__init__()\n",
     "        self.drop = nn.Dropout(dropout)  # to avoid component collapse\n",
@@ -398,7 +399,7 @@
     "\n",
     "\n",
     "class Decoder(nn.Module):\n",
-    "    # Base class for the recognition net, used in the model\n",
+    "    # Base class for the decoder net, used in the model\n",
     "    def __init__(self, vocab_size, num_topics, dropout):\n",
     "        super().__init__()\n",
     "        self.beta = nn.Linear(num_topics, vocab_size)\n",
@@ -416,11 +417,11 @@
     "        super().__init__()\n",
     "        self.vocab_size = vocab_size\n",
     "        self.num_topics = num_topics\n",
-    "        self.inference_net = Encoder(vocab_size, num_topics, hidden, dropout)\n",
-    "        self.recognition_net = Decoder(vocab_size, num_topics, dropout)\n",
+    "        self.encoder = Encoder(vocab_size, num_topics, hidden, dropout)\n",
+    "        self.decoder = Decoder(vocab_size, num_topics, dropout)\n",
     "\n",
     "    def model(self, docs=None):\n",
-    "        pyro.module(\"recognition_net\", self.recognition_net)\n",
+    "        pyro.module(\"decoder\", self.decoder)\n",
     "        with pyro.plate(\"documents\", docs.shape[0]):\n",
     "            # Dirichlet prior  𝑝(𝜃|𝛼) is replaced by a log-normal distribution\n",
     "            theta_loc = docs.new_zeros((docs.shape[0], self.num_topics))\n",
@@ -431,7 +432,7 @@
     "\n",
     "            # conditional distribution of 𝑤𝑛 is defined as \n",
     "            # 𝑤𝑛|𝛽,𝜃 ~ Categorical(𝜎(𝛽𝜃))\n",
-    "            count_param = self.recognition_net(theta)\n",
+    "            count_param = self.decoder(theta)\n",
     "            pyro.sample(\n",
     "                'obs',\n",
     "                dist.Multinomial(docs.shape[1], count_param).to_event(1),\n",
@@ -439,17 +440,17 @@
     "            )\n",
     "\n",
     "    def guide(self, docs=None):\n",
-    "        pyro.module(\"inference_net\", self.inference_net)\n",
+    "        pyro.module(\"encoder\", self.encoder)\n",
     "        with pyro.plate(\"documents\", docs.shape[0]):\n",
     "            # Dirichlet prior  𝑝(𝜃|𝛼) is replaced by a log-normal distribution,\n",
-    "            # where μ and Σ are the inference net outputs\n",
-    "            theta_loc, theta_scale = self.inference_net(docs)\n",
+    "            # where μ and Σ are the encoder network outputs\n",
+    "            theta_loc, theta_scale = self.encoder(docs)\n",
     "            theta = pyro.sample(\n",
     "                \"theta\", dist.LogNormal(theta_loc, theta_scale).to_event(1))\n",
     "            \n",
     "    def beta(self):\n",
     "        # beta matrix elements are the weights of the FC layer on the decoder\n",
-    "        return self.recognition_net.beta.weight.cpu().detach().T"
+    "        return self.decoder.beta.weight.cpu().detach().T"
    ]
   },
   {
