--- a/tutorial/source/svi_part_iv.ipynb
+++ b/tutorial/source/svi_part_iv.ipynb
@@ -92,6 +92,8 @@
    "source": [
     "### 4. If you are having trouble constructing a custom guide, use an AutoGuide\n",
     "In order for a model/guide pair to lead to stable optimization a number of conditions need to be satisfied, some of which we have covered above. \n",
+    "Sometimes it can be difficult to diagnose the reason for numerical instability or poor convergence. Among other reasons this is becaue the fundamental issue could arise in a number of different places: in the model, in the guide, or in the choice of optimization algorithm/hyperparameters. \n",
+    "\n",
     "Sometimes the problem is actually in your model even though you think it's in the guide. \n",
     "Conversely, sometimes the problem is in your guide even though you think it's in the model or somewhere else. \n",
     "For these reasons it can be helpful to reduce the number of moving parts while you try to identify the underyling issue.\n",
@@ -105,7 +107,7 @@
    "source": [
     "### 4. If you are having trouble constructing a custom guide, try MAP inference\n",
     "\n",
-    "If all the latent variables in your model are continuous, you can use MAP inference instead of full-blown variational inference. See the [MLE/MAP](http://pyro.ai/examples/mle_map.html) tutorial for further details. Once you have MAP inference working, there's good reason to believe that your model is setup correctly (at least form the point of optimization and numerical stability). If you're interested in obtaining approximate posterior distributions, you can now follow-up with full-blown SVI."
+    "If all the latent variables in your model are continuous, you can use MAP inference instead of full-blown variational inference. See the [MLE/MAP](http://pyro.ai/examples/mle_map.html) tutorial for further details. Once you have MAP inference working, there's good reason to believe that your model is setup correctly (at least as far as basic numerical stability is concerned). If you're interested in obtaining approximate posterior distributions, you can now follow-up with full-blown SVI."
    ]
   },
   {
@@ -116,7 +118,7 @@
     "\n",
     "Initialization in optimization problems can make all the difference between finding a good solution and catastrophic failure. \n",
     "It is difficult to come up with a comprehensive set of good practices for initialization, as good initialization schemes are often very problem dependent. In the context of Stochastic Variational Inference it is generally a good idea to initialize your guide distributions so that they have **low variance**. This is because the ELBO gradients you use to optimize the ELBO are stochastic. If the ELBO gradients you get at the beginning of ELBO optimization exhibit high variance, you may be led into numerically unstable or otherwise undesirable regions of parameter space. One way to guard against this potential hazard is to pay close attention to parameters in your guide that control variance. \n",
-    "For example we would generally expect this to be a reasonably initializated guide:\n",
+    "For example we would generally expect this to be a reasonably initialized guide:\n",
     "```python\n",
     "from torch.distributions import constraints\n",
     "\n",
@@ -132,6 +134,52 @@
     "                        constraint=constraints.positive)\n",
     "    pyro.sample(\"x\", dist.Normal(0.0, scale))\n",
     "``` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Consider normalizing your ELBO\n",
+    "\n",
+    "By default Pyro computes a un-normalized ELBO, i.e. it computes the quantity that is a lower bound to the log evidence computed on the full set of data that is being conditioned on. For large datasets this can be a number of large magnitude. Since computers use finite precision (e.g. 32-bit floats) to do arithmetic, large numbers can be problematic for numerical stability, since they can lead to loss of precision, under/overflow, etc.\n",
+    "For this reason it can be helpful in many cases to normalize your ELBO so that it is roughly order one. This can also be helpful for getting a rough feeling for how good your ELBO numbers are. For example if we have $N$ datapoints of dimension $D$ (e.g. $N$ real-valued vectors of dimension $D$) then we generally expect a reasonably well optimized ELBO to be order $N \\times D$. Thus if we renormalize our ELBO by a factor of $N \\times D$ we expect an ELBO of order one. While this is just a rough rule-of-thumb, if we use this kind of normalization and obtain ELBO values like $-123.4$ or $1234.5$ then something is probably wrong: perhaps our model is terribly mis-specified; perhaps our initilization is catastrophically bad, etc. For details on how you can scale your ELBO by a normalization constant see [this tutorial](http://pyro.ai/examples/custom_objectives.html#Example:-Scaling-the-Loss)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Pay attention to scales\n",
+    "\n",
+    "Scales matter. \n",
+    "They matter for at least two important reasons: \n",
+    "i) scales can make or break a particular initialization scheme; \n",
+    "ii) as discussed in the previous section, scales can have an impact on numerical precision and stability.\n",
+    "\n",
+    "To make this concrete suppose you are doing linear regression, i.e.\n",
+    "you're learning a linear map of the form $Y = W @ X$. Often the data comes with particular units. \n",
+    "For example some of the components of the covariate $X$ may be in units of dollars (e.g. house prices), while others may be in units of density (e.g. residents per square mile). \n",
+    "Perhaps the the first covariate has typical values like $10^5$, while the second covariate has typical values like $10^2$. \n",
+    "You should always pay attention when you encounter numbers that range across many orders of magnitude. \n",
+    "In many cases it makes sense to normalize things so that they are order unity. \n",
+    "For example you might measure house prices in units of $100,000.\n",
+    "\n",
+    "These sorts of data transformations can have a number of benefits for downstream modeling and inference. \n",
+    "For example if you've normalized all of your covariates appropriately, it may be reasonable to set a simple \n",
+    "isotropic prior on your weights\n",
+    "\n",
+    "```python\n",
+    "pyro.sample(\"W\", dist.Normal(torch.zeros(2), torch.ones(2)))\n",
+    "```\n",
+    "instead of having to specify different prior covariances for different covariates\n",
+    "```python\n",
+    "prior_cov = torch.tensor([1.e5, 1.e2])\n",
+    "pyro.sample(\"W\", dist.Normal(torch.zeros(2), prior_cov))\n",
+    "```\n",
+    "There are other benefits too. \n",
+    "It now becomes easier to initialize appropriate parameters for your guide. \n",
+    "It is also now much more likely that the default initializations used by a [pyro.infer.AutoGuide](http://docs.pyro.ai/en/stable/infer.autoguide.html#module-pyro.infer.autoguide) will work for your problem."
    ]
   },
   {
