--- a/tutorial/source/vae.ipynb
+++ b/tutorial/source/vae.ipynb
@@ -131,8 +131,10 @@
     "# for loading and batching MNIST dataset\n",
     "def setup_data_loaders(batch_size=128, use_cuda=False):\n",
     "    root = './data'\n",
+    "    download = True\n",
     "    trans = transforms.ToTensor()\n",
-    "    train_set = MNIST(root=root, train=True, transform=trans)\n",
+    "    train_set = MNIST(root=root, train=True, transform=trans,\n",
+    "                      download=download)\n",
     "    test_set = MNIST(root=root, train=False, transform=trans)\n",
     "\n",
     "    kwargs = {'num_workers': 1, 'pin_memory': use_cuda}\n",
